fix(ctrn): news article layout date alignment

--- a/ctrn_assets/css/news-feed--news-page.css
+++ b/ctrn_assets/css/news-feed--news-page.css
@@ -7,3 +7,7 @@
         'subtitle subtitle'
         'tags     tags';
 }
+.post-detail.dates {
+    /* FAQ: Because CTRN grid-template-areas moves date position in header */
+    text-align: right;
+}
